# SynapseCore

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE.md  README.md  glama.json  pyproject.toml
mesh_mcp_server/: __init__.py  server.py
