[project]
name = "mesh-mcp-server"
version = "0.1.0"
description = "MCP server for accessing mesh agents through Claude"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Heurist AI" }]
maintainers = [
    { name = "Heurist AI", email = "team@heurist.xyz" },
]
keywords = ["mcp", "llm", "automation", "mesh", "agents"]
license = { text = "MIT" }
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
]
dependencies = [
    "anyio>=4.5",
    "click>=8.1.0",
    "httpx>=0.27",
    "mcp",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "python-dotenv>=1.0.0",
    "requests>=2.28.0",
    "colorlog>=6.7.0"
]

[project.scripts]
mesh-tool-server = "mesh_mcp_server.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mesh_mcp_server"]

[tool.pyright]
include = ["mesh_mcp_server"]
venvPath = "."
venv = ".venv"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.uv]
dev-dependencies = ["pyright>=1.1.378", "pytest>=8.3.3", "ruff>=0.6.9", "pytest-asyncio>=0.23.0"]
